# gen-ai-soil-profiles

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
experiments/VAE/: CLEANUP_SUMMARY.md  README.md  preprocessing.py  run_experiment.py  run_multiple_smokes.py  run_tests.py  training.py  utils.py  vae_implementation.py  vae_model.pth  vae_model.py
experiments/VAE/configs/: wandb_sweep.yaml
experiments/VAE/src/: conv1d_vae.py  dae_trainer.py  datasets.py  enhanced_metrics.py  gmm_sampling.py  preprocessing.py  simple_conv1d_vae.py  training.py  utils.py  vae_implementation.py  vae_model.pth  vae_model.py  vq_vae_model.py
experiments/VAE/tests/: smoke_test.py  test_pipeline.py
experiments/Vp_calculation/: Vp_equations.py
experiments/conv1d_gan/: README.md  config.py  data.py  models.py  sample.py  train.py  utils.py
experiments/flow_matching/: README.md  __init__.py  config.py  data.py  evaluate_ffm.py  flow_match.py  job_gpu.sh  job_hyperparameter_sweep.sh  models.py  run_experiment.py  sample.py  test_evaluation.py  test_ffm.py  train.py  utils.py
experiments/flow_matching_simplified/: __init__.py  breakpoint_analysis.py  comparison_test.py  comprehensive_eval.py  config.py  data.py  evaluate.py  generation_profiles.py  model.py  sample.py  train.py  utils.py
experiments/parametric/: README.md  evaluate_parametric.py  run_experiment.py  run_parametric_experiment.py  test_parametric.py
experiments/parametric/src/: __init__.py  generative_models.py  parametric_models.py
experiments/stochastic_approach/: power_law.py
experiments/stochastic_approach/bayessian_power_law/: bayesian_power_law.py  calculate_priors.py
experiments/stochastic_approach/genetic_algorithm/: genetic_algorithm.py  plot_utils.py  read_data.py  run.py
gen_ai_soil_profiles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/VSPDB/: EDA.ipynb
scripts/: extract_vs_pairs.py  generate_synthetic_profiles.py  japan_data.py  vspdb_request_data.py
soilgen_ai/: base.py  logging_config.py
soilgen_ai/tts_profiles/: check.py
soilgen_ai/vs_profiles/: vs_calculation.py
src/: logging_config.py
tests/: test_base.py
tests/tts_profiles/: test_ttsprofileprocessor.py
tests/vs_profiles/: test_vs_calculation.py
