[project]
name = "gen-ai-soil-profiles"
version = "0.1.0"
description = "This project leverages generative AI techniques to analyze and predict soil profiles based on geotechnical studies."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
]
# Narrows the compatible Python versions to prevent future errors
requires-python = ">=3.12, <3.14" 
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
    "jupyter",
    "pyarrow>=21.0.0",
    "dotenv>=0.9.9",
    "markupsafe==2.1.3",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest", 
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

# Pytorch index
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]