[project]
name = "gen-ai-soil-profiles"
version = "0.1.0"
description = "This project leverages generative AI techniques to analyze and predict soil profiles based on geotechnical studies."
authors = [
    { name = "Kurt Walter Soncco Sinchi", email = "kurtwal98@berkeley.edu" },
]
# Narrows the compatible Python versions to prevent future errors
requires-python = ">=3.10" 
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "jupyterlab",
    "jupyter",
    "pyarrow>=21.0.0",
    "dotenv>=0.9.9",
    "markupsafe==2.1.3",
    "torch",
    "torchvision",
    "tqdm",
    "wandb",
    "box_sdk_gen[jwt]",
    "jax[cuda12]",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest", 
]

[tool.setuptools]
packages = ["soilgen_ai"]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.uv]
package = true
# Pytorch index
extra-index-url = ["https://download.pytorch.org/whl/cu126"]